# AIAssets

./: .gitignore  API_INTEGRATION_TASKS.md  BACKEND_TASKS.md  DATABASE_SCHEMA.md  DEPLOYMENT_PLAN.md  FRONTEND_BACKEND_TASKS.md  FRONTEND_TASKS.md  PROJECT_BRIEF.md  PROJECT_REQUIREMENTS.md
backend/: .env.example  .gitignore  README.md  TASKS.md  TASK_LIST_BACKEND.md  alembic.ini  docker-compose.mysql.yml  pyproject.toml  requirements.txt
backend/alembic/: README  env.py
backend/alembic/versions/: 20260520_0001_initial_schema.py  20260521_0001_initial_schema.py  20260522_0002_add_llm_api_format.py  20260522_0003_add_record_detail_order_indexes.py  20260522_0004_expand_map_url_columns.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: auth.py  celery_app.py  config.py  constants.py  crypto.py  exceptions.py  logging.py  middleware.py  response.py  responses.py  security.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/integrations/: cache.py
backend/app/models/: __init__.py  assets.py  auth.py  base.py  configuration.py  content.py  entities.py  external.py  generation.py  llm.py  task.py  user.py
backend/app/repositories/: admin_users.py  base.py  llm_configs.py  records.py  users.py
backend/app/schemas/: admin_users.py  ai_planning.py  amap.py  assets.py  auth.py  common.py  configuration.py  content.py  generation.py  llm.py  llm_configs.py  monitor.py  realtime.py  records.py  weather.py
backend/app/services/: admin_users.py  ai_planning.py  amap.py  asset_service.py  auth.py  auth_service.py  bootstrap.py  content_generation.py  fetch_service.py  ffmpeg_service.py  generation.py  generation_service.py  llm_configs.py  llm_gateway.py  llm_output_parser.py  llm_service.py  log_service.py  monitor_service.py  prompt_render.py  realtime.py  records.py  redis_service.py  review_service.py  serializers.py  weather.py
backend/app/tasks/: generation_tasks.py  render_tasks.py
backend/app/utils/: id.py  response.py  time.py
backend/scripts/: create_database.sql
backend/services/renderer/: README.md
backend/services/worker/: README.md
backend/tests/: conftest.py  test_admin_users.py  test_ai_planning.py  test_amap.py  test_auth.py  test_auth_dependencies.py  test_external_helper_routes.py  test_generation_stream.py  test_health.py  test_llm_client.py  test_llm_configs.py  test_realtime.py  test_records.py  test_weather.py
docs/: api.md  (+4 more)
(+222 files in other folders)
