[project]
name = "hours24-backend"
version = "0.1.0"
description = "FastAPI backend for the Hours24 AI content asset system."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "asyncmy>=0.2.10",
  "bcrypt>=4.2.0",
  "cryptography>=43.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "jsonschema>=4.23.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "pymysql>=1.1.1",
  "pyjwt>=2.9.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501", "UP046"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
