[project]
name = "hours24-backend"
version = "0.1.0"
description = "24小时AI增长资产引擎后端服务"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "apscheduler>=3.10.4",
    "beautifulsoup4>=4.12.0",
    "celery>=5.4.0",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.2.1",
    "pymysql>=1.1.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.25",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
