[project]
name = "routecraft-backend"
version = "0.1.0"
description = "RouteCraft FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "asyncmy>=0.2.9",
    "fastapi>=0.115.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
